--- a/control
+++ b/control
@@ -1,9 +1,9 @@
 Package: com.dgh0st.whitelistswitcher
 Name: WhitelistSwitcherClose
 Depends: mobilesubstrate, applist, preferenceloader
-Version: 1.0
+Version: 1.1
 Architecture: iphoneos-arm
-Description: Whitelist applications to become irremovable from the switcher and also blacklist applications to be restartable instead of closed.
+Description: Whitelist applications to become irremovable from the switcher and also blacklist applications to be restartable instead of close.
 Maintainer: DGh0st <deeppwnage@yahoo.com>
 Author: DGh0st <deeppwnage@yahoo.com>
 Section: Tweaks
